--- a/AddToNewLB.yaml
+++ b/AddToNewLB.yaml
@@ -13,7 +13,7 @@
       password: "{{password}}"
       server_port: "8443"
       name: "{{ pool_name }}"
-      lb_method: "round-robin"
+      lb_method: "{{ lb_name }}"
       monitors: "/Common/http"
       monitor_type: "and_list"
       validate_certs: "no"
@@ -26,8 +26,8 @@
       password: "{{password}}"
       server_port: "8443"
       state: "present"
-      name: "{{hostname}}"
-      host: "{{host}}"
+      name: "{{vm_hostname}}"
+      host: "{{vm_ip}}"
       port: "80"
       pool: "{{ pool_name }}"
       validate_certs: "no"
@@ -55,7 +55,7 @@
       user: "{{user}}"
       password: "{{password}}"
       server_port: "8443"
-      host: "{{ host }}"
-      name: "{{ hostname }}"
+      host: "{{ vm_ip }}"
+      name: "{{ vm_hostname }}"
       validate_certs: "no"
     register: node_created
